# akai

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.bat
src/: main.cpp
